# graphite

./: .clang-tidy  .cursorrules  CMakeLists.txt  README.md  main
.cursor/rules/: ast-patterns.mdc  cmake-build.mdc  compiler-architecture.mdc  cpp-standards.mdc  graphite-language.mdc  project-structure.mdc
cli/: CMakeLists.txt
cli/common/: CMakeLists.txt
cli/common/include/: colors.hpp
cli/graphite/: CMakeLists.txt
cli/graphite/src/: main.cpp
cli/graphite/src/cli/: cli.cpp
cli/graphite/src/cli/commands/: compile.cpp
cli/graphitec/: CMakeLists.txt
cli/graphitec/include/cli/: cli.hpp
cli/graphitec/include/cli/commands/: compile.hpp
cli/graphitec/src/: main.cpp
cli/graphitec/src/cli/: cli.cpp
cli/graphitec/src/cli/commands/: compile.cpp
codegen/: CMakeLists.txt
codegen/common/: CMakeLists.txt
codegen/common/include/codegen/: codegen.hpp  codegen_backend.hpp
codegen/common/src/codegen/: codegen.cpp
codegen/llvm/: CMakeLists.txt
codegen/llvm/include/codegen_llvm/: codegen.hpp  context.hpp  options.hpp  program.hpp  utils.hpp
codegen/llvm/include/codegen_llvm/expression/: array.hpp  assembly.hpp  binary.hpp  call.hpp  codegen.hpp  field.hpp  if.hpp  index.hpp  struct.hpp  unary.hpp  var_ref.hpp
codegen/llvm/include/codegen_llvm/statement/: block.hpp  codegen.hpp  extern.hpp  for.hpp  function.hpp  include.hpp  proto.hpp  return.hpp  var.hpp  while.hpp
codegen/llvm/src/codegen_llvm/: codegen.cpp  context.cpp  program.cpp  utils.cpp
codegen/llvm/src/codegen_llvm/expression/: array.cpp  assembly.cpp  binary.cpp  call.cpp  field.cpp  if.cpp  index.cpp  struct.cpp  unary.cpp  var_ref.cpp
codegen/llvm/src/codegen_llvm/statement/: block.cpp  extern.cpp  for.cpp  function.cpp  include.cpp  proto.cpp  return.cpp  var.cpp  while.cpp
common/: CMakeLists.txt
common/include/: codegen_backend_type.hpp
common/include/logger/: log_types.hpp  logger.hpp
common/src/: colors.cpp
common/src/logger/: logger.cpp
compiler/: CMakeLists.txt
compiler/include/compiler/: compiler.hpp  compiler_backend.hpp
compiler/src/compiler/: compiler.cpp
examples/: a.c  add.gph  car.gph  gtk.gph  hello.c  hello.gph  main.c  main.gph  print_number.c  std.c  test.gph
examples/c/: print_string.c  std.c
examples/future_syntax/: class.gph  hello.gph
frontend/: CMakeLists.txt
frontend/include/ast/: expression.hpp  statement.hpp
frontend/include/ast/expression/: array.hpp  assembly.hpp  binary.hpp  boolean.hpp  call.hpp  field.hpp  identifier.hpp  if.hpp  index.hpp  integer.hpp  string.hpp  struct.hpp  type.hpp  unary.hpp  var_ref.hpp
frontend/include/ast/statement/: block.hpp  expression.hpp  extern.hpp  for.hpp  function.hpp  include.hpp  proto.hpp  return.hpp  struct.hpp  type.hpp  var.hpp  while.hpp
frontend/include/lexer/token/: token_type.hpp
frontend/include/logger/: logger.hpp
frontend/include/parser/: parser.hpp  precedence.hpp
frontend/include/parser/expression/: array.hpp  assembly.hpp  binary.hpp  boolean.hpp  call.hpp  field.hpp  group.hpp  identifier.hpp  if.hpp  index.hpp  integer.hpp  parser.hpp  string.hpp  struct.hpp  type.hpp  unary.hpp  var_ref.hpp
frontend/include/parser/statement/: block.hpp  expression.hpp  extern.hpp  for.hpp  function.hpp  include.hpp  proto.hpp  return.hpp  statement.hpp  struct.hpp  type.hpp  var.hpp  visibility.hpp  while.hpp
frontend/include/program/: parser.hpp  program.hpp
frontend/include/semantic/: type_helper.hpp  visibilty.hpp
frontend/include/semantic/env/: env.hpp
frontend/include/semantic/scope/: scope.hpp
frontend/include/semantic/symbols/: function.hpp  type.hpp  variable.hpp
frontend/include/semantic/type_resolver/: type_resolver.hpp
frontend/include/semantic/validator/: validator.hpp
frontend/include/types/: array.hpp  boolean.hpp  float.hpp  function.hpp  int.hpp  null.hpp  pointer.hpp  string.hpp  struct.hpp  type.hpp  void.hpp
frontend/include/types/parser/: parser_struct_type.hpp  parser_unresolved_type.hpp  unknown_parser_type.hpp
frontend/src/ast/expression/: array.cpp  assembly.cpp  binary.cpp  boolean.cpp  call.cpp  field.cpp  identifier.cpp  if.cpp  index.cpp  integer.cpp  string.cpp  struct.cpp  type.cpp  unary.cpp  var_ref.cpp
frontend/src/ast/statement/: block.cpp  expression.cpp  extern.cpp  for.cpp  function.cpp  include.cpp  proto.cpp  return.cpp  struct.cpp  type.cpp  var.cpp  while.cpp
frontend/src/lexer/: lexer.cpp
frontend/src/lexer/token/: keywords.cpp  token.cpp
frontend/src/logger/: logger.cpp
frontend/src/parser/: parser.cpp
frontend/src/parser/expression/: array.cpp  assembly.cpp  binary.cpp  boolean.cpp  call.cpp  field.cpp  group.cpp  identifier.cpp  if.cpp  index.cpp  integer.cpp  string.cpp  struct.cpp  type.cpp  unary.cpp  var_ref.cpp
frontend/src/parser/statement/: block.cpp  expression.cpp  extern.cpp  for.cpp  function.cpp  include.cpp  proto.cpp  return.cpp  statement.cpp  struct.cpp  type.cpp  var.cpp  visibility.cpp  while.cpp
frontend/src/program/: parser.cpp  program.cpp
frontend/src/semantic/env/: env.cpp
frontend/src/semantic/scope/: scope.cpp
frontend/src/types/: array.cpp  boolean.cpp  float.cpp  function.cpp  int.cpp  null.cpp  pointer.cpp  string.cpp  struct.cpp  void.cpp
include/analyzer/: analyzer.hpp
include/ast/: expression.hpp  program.hpp  program_context.hpp  statement.hpp
include/cli/: cli.hpp  colors.hpp
include/codegen/: codegen.hpp  context.hpp
include/compiler/: compiler.hpp
include/env/: env.hpp
include/lexer/: lexer.hpp  position.hpp
include/logger/: log_types.hpp  logger.hpp
include/parser/: parser.hpp  precedence.hpp
include/program/: context.hpp  program.hpp
include/semantic/: linkage_type.hpp  type_helper.hpp
include/token/: grammar.hpp  token.hpp  token_type.hpp
include/types/: array.hpp  boolean.hpp  float.hpp  function.hpp  int.hpp  null.hpp  pointer.hpp  string.hpp  type.hpp  void.hpp
src/: main.cpp
src/ast/: program.cpp
src/cli/: cli.cpp  colors.cpp
src/codegen/: codegen.cpp  context.cpp
src/compiler/: compiler.cpp
src/env/: env.cpp
(+303 files in other folders)
